# jweb

./: README.md  _setup.cfg  dev-requirements.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: build_package.yml
src/jweb/: __init__.py  app.py  navigation.py  page.py  settings.py
src/jweb/page/: __init__.py
