[metadata]
name = jweb-pkg-jwndlng
version = 0.0.1
author = Jan Wendling
author_email = jan.wendling@ispin.ch
description = JWEB is a static web application builder used for hostings like github.io
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jwndlng/jweb
project_urls =
    Bug Tracker = https://github.com/jwndlng/jweb/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

install_requires = [
    'docutils>=0.17.1',
    'Jinja2>=3.0.1',
    'Markdown>=3.3.4',
    'MarkupSafe>=2.0.1',
    'PyYAML>=5.4.1'
]

[options.packages.find]
where = src